--- a/README
+++ b/README
@@ -1,4 +1,4 @@
--I’m OperaComposer
+-I’m OperaComposer, I'm italian
 
 -I’m interested in writing, philosophy, music, space and...talk to me to know more
 
