--- a/README
+++ b/README
@@ -1,9 +1,11 @@
 -I’m OperaComposer, I'm italian
+-I learn many languages - I know: French, Spanish, Italian, English and I'm learning Japanese
+-I’m interested in writing, philosophy, music, space, Japan and...talk to me to know more
 
--I’m interested in writing, philosophy, music, space and...talk to me to know more
-
--System- meet us and treat us respectfully
-
+-System- meet and treat us respectfully
 -Pronouns: he/him - she/her
+-I'm usually a reserved person, but don't mind me going nuts about my interests
 
 Don't know how to make a profile
+
+Fred is just a silly lil guy :O
